# norm-takehome-fullstack

./: .gitignore  Dockerfile  README.md  pyproject.toml
app/: main.py  utils.py
frontend/: next.config.mjs  package-lock.json
frontend/api/: index.ts
frontend/app/: page.tsx
